# NEEP-MS

./: CMakeLists.txt  NEEP-MS  README.md  student.txt  worker.txt  功能结构图.drawio  用户使用流程.drawio  继承关系.drawio  链表节点操作.drawio
src/model/: student.cpp  student.hpp  subject.cpp  subject.hpp
src/structure/: linkedlist.hpp
src/user/: data.hpp  manager.cpp  manager.hpp  user.hpp  visitor.cpp  visitor.hpp  worker.cpp  worker.hpp
test/: test_linkedlist.cpp  test_user.cpp
